se quito el titulo de mision y vision, tambien se organizo con flex para que las imagenes estuvieran centradas verticalmente

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,14 @@
     width: 88%;
 }
 
+#mision-p {
+    height: 220px;
+}
+
+#vision-p {
+    height: 220px;
+}
+
 #extra-contacts {
     display: flex;
     flex-direction: row;
