--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,60 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Mono&display=swap");
+
+* {
+    font-family: "Noto Sans Mono", monospace;
+}
+
 #main-header {
     background-image: url("../src/img/bg.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    height: 400px;
+    height: 100vh;
     width: 100%;
+}
+
+#about {
+    align-items: center;
+    background-image: url("../src/img/medical-bg.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    height: 500px;
+}
+
+ul li {
+    text-decoration: none;
+}
+
+#valores {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#valores-section {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+    padding: 40px;
+    width: 90%;
+}
+
+#valores-section section {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    height: 50px;
+    font-weight: bold;
+    width: 250px;
+}
+
+#valores-section section:hover {
+    font-size: 1.2rem;
 }
 
 #pqrsf-form {
